@@ -453,12 +453,13 @@ int CmdLevel(int argc, char *argv[], char *cmdline)
     else
     {
         char buf[128];
-        snprintf(buf, 128, "%s%s%s%s%s", 
+        MSGBUF( buf, "%s%s%s%s%s", 
             (sysblk.sysgroup&SYSGROUP_SYSOPER)?"operator ":"",
             (sysblk.sysgroup&SYSGROUP_SYSMAINT)?"maintenance ":"",
             (sysblk.sysgroup&SYSGROUP_SYSPROG)?"programmer ":"",
             (sysblk.sysgroup&SYSGROUP_SYSDEVEL)?"developer ":"",
             (sysblk.sysgroup&SYSGROUP_SYSDEBUG)?"debugging ":"");
+        buf[strlen(buf)-1] = 0;
         WRMSG(HHC01606, "I", sysblk.sysgroup, buf);
     }
     
